@@ -6,4 +6,10 @@ describe Taza::Entity do
     entity = Taza::Entity.new({'apple' => 'pie'},nil)
     entity.should respond_to(:apple)
   end
+
+  it "should be accessible like a hash(foo[:bar])" do
+    entity = Taza::Entity.new({:apple => 'pie'},nil)
+    entity[:apple].should eql('pie')
+  end
+
 end
